use flex to make sure the spacing is equal even when long player names are shown (#31)

--- a/less/gamelist.less
+++ b/less/gamelist.less
@@ -236,12 +236,18 @@
 }
 
 .game-player-row {
+  display: flex;
+  flex-direction: column;
+  flex: 1;
+  
   &.first-player {
     margin-right: 10px;
+    align-items: flex-end;
   }
 
   &.other-player {
     margin-left: 10px;
+    align-items: flex-start;
   }
 }
 
